--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
+    id "io.freefair.lombok" version "8.6"
 }
 
 group = 'com.anavla777'
@@ -9,11 +11,40 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.encoding = 'UTF-8'
+}
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
+def restAssuredVersion = "5.4.0",
+    allureVersion = "2.27.0"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjVersion.set("1.9.22.1")
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+}
+
+
+
 dependencies {
     testImplementation (
     "org.junit.jupiter:junit-jupiter:5.10.2",
     'org.slf4j:slf4j-simple:2.0.13',
-    'io.rest-assured:rest-assured:5.4.0',
+    "io.rest-assured:rest-assured:$restAssuredVersion",
+    "io.rest-assured:json-schema-validator:$restAssuredVersion",
+    "io.qameta.allure:allure-rest-assured:$allureVersion",
     'org.assertj:assertj-core:3.26.0',
     )
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
